fixing button location on small device

--- a/assets/style.css
+++ b/assets/style.css
@@ -28,7 +28,7 @@ body {
   align-items: center;
 }
 
-.glide__slide {
+.direct {
   border: 20px solid black;
 }
 
@@ -119,15 +119,17 @@ a:hover {
   .card-info {
     font-size: 20px;
   }
-  .glide__slide {
-    border: 5px solid black;
-  }
 
   .details {
     font-size: 15px;
   }
   .custom-glide {
     border: none !important;
-    top: 100% !important;
+    top: 110% !important;
+  }
+
+  .direct {
+    height: 300px;
+    border: 5px solid black;
   }
 }
